# CAP-ME

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
analysis/: analyze_feedback_evaluation.py  build_review_bundle.py  compare_multihost_runs.py  generate_artifacts.py  generate_evidence_manifest.py  generate_fso_artifacts.py  generate_fso_robustness_artifacts.py  generate_fso_structure_artifacts.py  generate_robustness_artifacts.py  prepare_fso_traces.py  run_analysis.py  run_censorlab_study.py  run_fso_deterministic_lab.py  run_fso_independent_replay.py  run_fso_loopback.py  run_fso_multihost.py  run_fso_scalability.py  run_fso_sensitivity.py  run_fso_structure_replay.py  run_robustness_study.py  validate_artifact.py  validate_field_authorization.py  validate_public_boundary.py
artifacts/: reference-environment.json  reference-validation.json  references.bib
configs/: fso-censorlab-campaign.json  fso-censorlab.json  fso-confirmation-source.json  fso-confirmation.json  fso-deterministic-lab.json  fso-feedback-evaluation.json  fso-feedback-source.json  fso-independent-replay.json  fso-loopback.json  fso-multihost.json  fso-scalability.json  fso-sensitivity.json  fso-structure-replay.json  fso-study.json  robustness-smoke.json  robustness.json  smoke.json  study.json
docs/: artifact-evaluation.md  claim-ledger.md  ethics.md  fso-development-log.md  fso-novelty-audit.md  fso-protocol.md  manuscript-policy.md  methodology.md  model-uncertainty.md  novelty-audit.md
field/: README.md  authorization-template.json  (+4 more)
(+367 files in other folders)
